Added porygons head

--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
   </head>
   <body>
     <div class="ground"></div>
+    <div class="the-fake"></div>
+    <div class="porygon-wrapper">
+      <div class="head-wrapper">
+        <div class="back-head-line"></div>
+        <div class="back-head-bottom"></div>
+        <div class="back-head-top"></div>
+        <div class="eye eye-left"></div>
+        <div class="bottom-head"></div>
+        <div class="side-head"></div>
+        <div class="mid-head"></div>
+        <div class="nose"></div>
+        <div class="eye eye-right">
+          <span class="eye-ball"></span>
+        </div>
+      </div>
+      <div class="left-leg">
+
+      </div>
+      <div class="body-wrapper">
+
+      </div>
+      <div class="right-leg">
+
+      </div>
+      <div class="tail">
+      </div>
+    </div>
     </div>
   </body>
 </html>
