WIP - Body and tail

--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
           <span class="eye-ball"></span>
         </div>
       </div>
-      <div class="left-leg">
-
+      <div class="tail-wrapper">
+        <div class="tail-top"></div>
+        <div class="tail-bottom"></div>
       </div>
       <div class="body-wrapper">
-
+        <div class="body-back-top"></div>
+        <div class="body-front-highlight"></div>
+        <div class="body-front-top"></div>
+        <div class="body-front-bottom"></div>
       </div>
-      <div class="right-leg">
-
+      <div class="leg-wrapper right-leg">
+        <div class="leg-side"></div>
+        <div class="leg-top"></div>
+        <div class="leg-front"></div>
       </div>
-      <div class="tail">
-      </div>
-    </div>
     </div>
   </body>
 </html>
