--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
   </head>
   <body>
     <div class="ground"></div>
-    <div class="the-fake"></div>
     <div class="porygon-wrapper">
+      <div class="tail-wrapper">
+        <div class="tail-top"></div>
+        <div class="tail-bottom"></div>
+      </div>
+      <div class="leg-wrapper left-leg">
+        <div class="leg-side"></div>
+        <div class="leg-top"></div>
+        <div class="leg-front"></div>
+      </div>
+      <div class="body-wrapper">
+        <div class="neck"></div>
+        <div class="body-back-bottom"></div>
+        <div class="body-back-top"></div>
+        <div class="body-front-highlight"></div>
+        <div class="body-front-top"></div>
+        <div class="body-front-bottom"></div>
+      </div>
       <div class="head-wrapper">
         <div class="back-head-line"></div>
         <div class="back-head-bottom"></div>
@@ -23,16 +39,6 @@
         <div class="eye eye-right">
           <span class="eye-ball"></span>
         </div>
-      </div>
-      <div class="tail-wrapper">
-        <div class="tail-top"></div>
-        <div class="tail-bottom"></div>
-      </div>
-      <div class="body-wrapper">
-        <div class="body-back-top"></div>
-        <div class="body-front-highlight"></div>
-        <div class="body-front-top"></div>
-        <div class="body-front-bottom"></div>
       </div>
       <div class="leg-wrapper right-leg">
         <div class="leg-side"></div>
