Added another tree, hide on responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
   </head>
   <body>
     <div class="ground"></div>
+    <div class="mountain-one">
+      <div class="mountain-left"></div>
+      <div class="mountain-right"></div>
+    </div>
+    <div class="mountain-two">
+      <div class="mountain-left"></div>
+      <div class="mountain-right"></div>
+    </div>
+    <div class="tree-one">
+      <div class="trunk"></div>
+      <div class="shrub shrub-one"></div>
+      <div class="shrub shrub-two"></div>
+      <div class="shrub shrub-three"></div>
+    </div>
+    <div class="tree-two">
+      <div class="trunk"></div>
+      <div class="shrub shrub-one"></div>
+      <div class="shrub shrub-two"></div>
+      <div class="shrub shrub-three"></div>
+    </div>
+    <div class="tree-three">
+      <div class="trunk"></div>
+      <div class="shrub shrub-one"></div>
+      <div class="shrub shrub-two"></div>
+      <div class="shrub shrub-three"></div>
+    </div>
+    <div class="tree-four">
+      <div class="trunk"></div>
+      <div class="shrub shrub-one"></div>
+      <div class="shrub shrub-two"></div>
+      <div class="shrub shrub-three"></div>
+    </div>
     <div class="porygon-wrapper">
       <div class="tail-wrapper">
         <div class="tail-top"></div>
