Added water, fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <div class="shrub shrub-one"></div>
       <div class="shrub shrub-two"></div>
       <div class="shrub shrub-three"></div>
+      <div class="water"></div>
     </div>
     <div class="porygon-wrapper">
       <div class="tail-wrapper">
